--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "jsonwebtoken": "^9.0.0",
     "mysql2": "^3.2.0",
     "node-cron": "^3.0.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
